--- a/config/aero1/aerospike.conf
+++ b/config/aero1/aerospike.conf
@@ -23,8 +23,8 @@ network {
   service {
 	address any
     port 3000
-    access-address %address% virtual
-	network-interface-name eth1
+    access-address 172.18.100.10 virtual
+	network-interface-name eth0
 
   }
   fabric {
@@ -32,14 +32,14 @@ network {
   }
   heartbeat {
 	mode mesh
-    address %address%
+    address 172.18.100.10
     port 3002
 
-    mesh-seed-address-port 172.17.10.11 3002
-    mesh-seed-address-port 172.17.10.12 3002
-    mesh-seed-address-port 172.17.10.13 3002
-    mesh-seed-address-port 172.17.10.14 3002
-    mesh-seed-address-port 172.17.10.15 3002
+    mesh-seed-address-port 172.18.100.10 3002
+    mesh-seed-address-port 172.18.100.11 3002
+    mesh-seed-address-port 172.18.100.12 3002
+    mesh-seed-address-port 172.18.100.13 3002
+    mesh-seed-address-port 172.18.100.14 3002
 
     interval 150
     timeout  20
@@ -49,14 +49,14 @@ network {
   }
 }
 
-namespace test {
+namespace cdn {
   replication-factor 2
   memory-size 1G
   default-ttl 5d
   ldt-enabled true
 
   storage-engine device {
-    file /opt/aerospike/data/test.dat
+    file /opt/aerospike/data/cdn.dat
     filesize 4G
     data-in-memory true
   }
